# Troupe

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  drizzle.config.ts  eslint.config.mjs  findings.md  package-lock.json  package.json  progress.md  task_plan.md  troupe.db-shm  tsconfig.json
.claude/: settings.local.json
.codex-backups/: troupe.db-shm.recovered-duplicate  troupe.db-wal.accidental-empty-backup  troupe.db-wal.recovered-duplicate
design-mode/: Troupe_生图执行清单_12次完整Prompt.md  Troupe_生图执行清单_新版变量版.md
docs/design/troupe-redesign/: 00_image-index.md  01_visual-direction.md  02_design-tokens.md  ui-refactor-progress.md
docs/plans/: 2026-04-18-claude-cli-bridge.md  2026-04-18-shared-design-spec-maintenance.md
drizzle/: 0000_motionless_lady_vermin.sql  0001_steady_freak.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
scripts/: tauri-bootstrap.js  tauri-bootstrap.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: dashboard-project-cards.test.ts  globals.css  layout.tsx  page.tsx
src/app/api/: projects-id-route.test.ts
src/app/settings/: page.tsx
src/components/chat/: brainstorm-progress-card.tsx  chat-markdown.tsx  chat-panel.tsx  chat-prompt-suggestions.tsx  phase-context-card.tsx  questionnaire-card.tsx  requirements-guide-card.tsx
src/components/documents/: document-editor.tsx  document-generation-dialog.tsx  document-panel.tsx  markdown-viewer.tsx
src/components/layout/: window-header.tsx
src/components/ui/: button.tsx
src/lib/: tag-colors.ts
src/types/: chat.ts  index.ts
(+70 files in other folders)
