[package]
name = "troupe"
version = "0.1.0"
edition = "2021"
description = "AI Multi-Agent Product Development Workstation"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
